src/browser/monkey-menu.css
:root {
  --arrowpanel-dimmed: hsla(0, 0%, 80%, 0.3);
  --panel-max-height: 600px;
  --panel-separator-color: ThreeDShadow;
  --panelui-subview-transition-duration: 150ms;
}

body {
  cursor: default;
  font: caption;
  max-height: var(--panel-max-height);
  max-width: 22.35em;
  min-width: 22.35em;
  overflow-x: hidden;
  transition: height var(--panelui-subview-transition-duration);
  will-change: transform;

  display: flex;

}
body.rendering { display: none; }
body section { max-height: var(--panel-max-height); }

/* Depth = 1 Cascading Menu
 * The below styles (along with a simple JS listener) are used to create a
 * sliding menu effect. To create a top level menu (depth = 1) the below style
 * structure can be copied. Further down incudes explaination on how to create
 * a nested cascading menu (depth > 1).
 */
body #menu {
  transition-duration: 0.25s;
  transition-property: margin;
}

body.detail #menu {
  margin-left: -22.35em;
}

body #user-script-detail {
  visibility: hidden;
  transition-duration: 0.25s;
  transition-property: visibility;
}

body.detail #user-script-detail {
  visibility: visible;
}

/* Depth > 1 Cascading Menu
 *
 * For the below example let us assume we have a section with id
 * '#user-script-config' and it is displayed by applying the class '.config'
 * on the body element. Furthermore, this section is accessed from the
 * '#user-script-detail' menu.
 *
 * Note: It is assumed that the HTML follows all <section> tags belong to
 * the same parent node.
 *
 * Firstly, add the margin transition on the direct parent menu.
body #user-script-detail {
  transition-duration: 0.25s, 0.25s;
  transition-property: visibility, margin;
}
 *
 * Then, for the specific body class, apply a negative margin to all parent
 * menus (including the TOP menu).
body.config #menu,
body.config #user-script-detail {
  margin-left: -22.35em;
}
 *
 * Set the default visibility and transition effect on the new menu section.
body #user-script-config {
  visibility: hidden;
  transition-duration: 0.25s;
  transition-property: visibility;
}
 *
 * Apply visibility to the new menu, and parent menus (not the TOP menu) when
 * the body is set to the new class.
body.config #user-script-detail,
body.config #user-script-config {
  visibility: visible;
}
 *
 * In the JS code, when the body class is applied it should be noted that the
 * new menu needs its display set to 'block'. Check the '#user-script-detail'
 * section for example.
 */

section {
  max-width: 22.35em;
  min-width: 22.35em;
}

.subview-header {
  align-items: center;
  border-bottom: 1px solid var(--panel-separator-color);
  display: flex;
  flex: 1 auto;
  height: 40px;
  padding: 4px;
}

.subview-back {
  box-sizing: content-box;
  color: inherit;
  display: -moz-box;
  height: 16px;
  margin-right: 4px;
  padding: 8px;
  width: 16px;
}

.subview-back::before {
  content: url(/skin/back.svg);
  display: -moz-box;
}

.subview-title {
  color: -moz-fieldText;
  margin-right: 24px;
  overflow-x: hidden;
  text-align: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.subview-body {
  max-height: 560px;
  padding: 6px 0;
  overflow-y: auto;
  overflow-x: hidden;
}

.subview-body hr {
  border-top: 1px solid var(--panel-separator-color);
  margin: 6px 0;
  min-height: 0;
}

.subview-item {
  -moz-box-align: center;
  background-color: transparent;
  color: -moz-fieldText;
  cursor: default;
  display: -moz-box;
  max-height: 24px;
  min-height: 24px;
  padding: 4px 12px 4px 7px;
  width: 100%;
}

.subview-item.heading {
  color: #333;
  font-style: italic;
  padding-left: 21px;
}

.subview-item.disabled {
  color: #999;
}

.subview-back:hover,
.subview-back:focus,
.subview-item:hover,
.subview-item:focus {
  background-color: var(--arrowpanel-dimmed);
  cursor: default;
  color: inherit;
  text-decoration: none;
}

.subview-item .icon {
  font-size: 14px;
  text-align: center;
  width: 19px;
}

.subview-item .icon img {
  object-fit: contain;
  width: 19px;
  height: 17px;
}

.subview-item.disabled .icon {
  opacity: 0.7;
}

.subview-item .text {
  -moz-box-flex: 1;
  display: -moz-box;
  overflow-x: hidden;
  padding-left: 3px;
  text-overflow: ellipsis;
}

.subview-item::after {
  margin-inline-start: 10px;
  content: attr(after);
  float: right;
  color: GrayText;
}

.subview-item.next-menu::after {
  content: url(/skin/next.svg);
  transform: scaleX(-1) translateY(2px);
}

